# investai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  env.cloudrun.yaml.example  pyproject.toml
apps/: __init__.py
apps/api/: main.py
apps/api/investai_api/: __init__.py  bootstrap.py  catalog.py  config.py  db.py  models.py  schemas.py
apps/api/investai_api/api/: routes.py  telegram.py
apps/api/investai_api/services/: analytics_service.py  command_parser.py  discovery_service.py  job_service.py  market_data_service.py  message_formatter.py  portfolio_service.py  profile_service.py  signal_engine.py  telegram_handler.py  telegram_service.py
docs/: investment-alert-assistant-blueprint.md
