[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investai"
version = "0.1.0"
description = "Telegram-first investment alert assistant focused on discovery, portfolio monitoring and backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps"]

